--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
     }
 
     .wrapper {
-      display: flex;
+      display: inline-flex;
+      background: rgba(0, 0, 0, 0.6);
+      padding: 16px;
+      border-radius: 16px;
+    }
+
+    .first {
+      margin-right: 20px;
     }
 
     .column {
       display: flex;
       flex-direction: column;
-      margin-right: 20px;
     }
   </style>
 </head>
 <body>
   <div class="wrapper">
-    <div class="column">
+    <div class="column first">
       <img src="./g.png" />
       <img src="./o.png" />
       <img src="./p.png" />
